@@ -4,5 +4,7 @@
 
 *** Add support for hashdeep to use NSRL files and other types?
 
+*** Add timestamp mode (-t) to hashdeep
+
 *** Add 'make test' directive to run compiled programs on test files 
     and ensure compilation was successful. 
